
Mods Added:
- Better Invisibility
- Scavenge
- Worse Barrels

Mods Removed:
- Enchantment Descriptions

Mods Updated:
- Botania Tweaks
- Client Tweaks
- Fairy Lights
- FastWorkbench
- KleeSlabs
- ModTweaker
- Quark
- SmoothFont
- Toast Control
- Trample Stopper
- Traverse
- WAWLA
- Waystones
- Worley's Caves

Enhancements:
- Disallow breaking generated waystones
- Rebalanced all waystones recipes around Botania progression
- Added taglines to Lexicon entries
- Added gravel -> sand anvil smashing recipe
- Added recipes to (inefficiently) recycle damaged leather armor and saddles back into leather

Bugfixes:
- Quark note block interface now requires an empty hand, because otherwise it breaks AFK fishing setups