@@ -1,6 +1,12 @@
 # Configuration file
 
 general {
+    # Lists the criteria for partially completed advancements, e.g. the biomes required for 'Adventuring Time'
+    #     Off: Vanilla default
+    #     Default: List which criteria you have already obtained
+    #     Spoiler: Also reveal unobtained criteria
+    S:criteriaDetail=Default
+    B:criteriaDetailRequiresShift=false
     S:defaultCompletedIconColor=#DBA213
     S:defaultCompletedLineColor=#FFFFFF
     S:defaultCompletedTitleColor=#DBA213
