@@ -9,4 +9,18 @@ general {
     # Selects the files that load into the NBTStorage [default: ]
     S:NBTFiles <
      >
+    B:printDocumentation=false
+    B:printDocumentationInCurseFormat=false
 }
+
+
+plugins {
+    B:Forge=true
+    B:Loot=true
+    B:Player=true
+    B:Score=true
+    B:Utils=true
+    B:World=true
+}
+
+
